# tless

./: .env  .gitignore  .gitmodules  Cargo.toml  GEMINI.md  README.md  docker-compose.yml  requirements.txt  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
accless/: CMakeLists.txt  README.md  build.py  libaccless.imports
accless/cmake/: NativeExternalProjects.cmake  WasmExternalProjects.cmake
accless/include/: accless.h  dag.h  tless.h  utils.h
accless/libs/abe4/: Cargo.toml  README.md
accless/libs/abe4/cpp-bindings/: CMakeLists.txt  abe4.cpp  abe4.h  api_tests.cpp  tests.cpp
accless/libs/abe4/src/: curve.rs  hybrid.rs  lib.rs
accless/libs/abe4/src/hashing/: mod.rs  swift_ec.rs  swift_hasher.rs
accless/libs/abe4/src/policy/: mod.rs  secret_sharing.rs
accless/libs/abe4/src/policy/parser/: lexer.rs  mod.rs
accless/libs/abe4/src/scheme/: decrypt.rs  encrypt.rs  group_pairs.rs  iota.rs  keygen.rs  mod.rs  setup.rs  tau.rs  types.rs
accless/libs/abe4/tests/: api_tests.rs
accless/libs/attestation/: CMakeLists.txt  attestation.cpp  attestation.h  ec_keypair.cpp  ec_keypair.h  http_client.cpp  mock.cpp  mock.h  mock_sgx.cpp  mock_snp.cpp  snp.cpp  utils.cpp  vcek_cache.cpp  vcek_cache.h
accless/libs/azure-cvm-attestation/: CMakeLists.txt  azure_cvm_attestation.cpp  azure_cvm_attestation.h
accless/libs/base64/: CMakeLists.txt  base64.cpp  base64.h  tests.cpp
accless/libs/jwt/: .gitignore  Cargo.toml  build.rs  test.cpp
accless/libs/jwt/cpp-bindings/: CMakeLists.txt  jwt.cpp  jwt.h  tests.cpp
accless/libs/jwt/src/: lib.rs
accless/libs/s3/: CMakeLists.txt  S3Wrapper.cpp  S3Wrapper.hpp
accless/src/: .tless.cpp.swp  accless.cpp  dag.cpp  tless.cpp  utils.cpp
accless/tests/: CMakeLists.txt  main.cpp
accli/: Cargo.toml  build.rs
ansible/: accless.yaml  mhsm.yaml  sgxfaasm.yaml  snp_vm.yaml  snpknative.yaml  trustee.yaml
applications/: CMakeLists.txt  build.py
applications/functions/: CMakeLists.txt
applications/functions/breakdown-snp/: CMakeLists.txt  main.cpp
applications/functions/escrow-xput/: CMakeLists.txt  maa.cpp  maa.h  main.cpp
applications/functions/escrow-xput/src/: logger.cpp  maa.cpp  main.cpp
applications/functions/hello-snp/: CMakeLists.txt  main.cpp
applications/functions/utils/: CMakeLists.txt
applications/functions/utils/include/utils/: time_breakdown.h
applications/test/: CMakeLists.txt
applications/test/att-client-sgx/: CMakeLists.txt  main.cpp
applications/test/att-client-snp/: CMakeLists.txt  main.cpp
applications/test/multi-as/: CMakeLists.txt  main.cpp
attestation-service/: .gitignore  Cargo.toml  README.md  build.rs
attestation-service/src/: .main.rs.swp  amd.rs  azure_cvm.rs  ecdhe.rs  intel.rs  jwt.rs  lib.rs  main.rs  mock.rs  request.rs  sgx.rs  snp.rs  state.rs  tls.rs  types.rs
attestation-service/tests/: as_api_tests.rs  common.rs  main.rs
azure/: snp_guest_cloud-init.txt  snp_guest_parameters.json  snp_guest_template.json
docker/: accless-experiments.dockerfile  accless-knative-worker.dockerfile  base-sgx.dockerfile  base.dockerfile  cli.dockerfile  tless-experiments.dockerfile  tless-knative-worker.dockerfile  upload.dockerfile  worker.dockerfile
docs/: baselines.md  (+7 more)
functions/escrow-xput-tless/: .clang-format  CMakeLists.txt
functions/escrow-xput-tless/include/: logger.h  utils.h
functions/escrow-xput-tless/src/: logger.cpp  main.cpp  utils.cpp
invrs/: Cargo.toml
invrs/ansible/inventory/: vms.ini
invrs/src/: .attestation_service.rs.swp  attestation_service.rs  env.rs  main.rs  tasks.rs
invrs/src/tasks/: .dag.rs.swp  .eval.rs.swp  azure.rs  color.rs  dag.rs  docker.rs  eval.rs  s3.rs  ubench.rs  workflows.rs
template-graph/: Cargo.toml
template-graph/src/: lib.rs  policy_compiler.rs
template-graph/tests/: api_tests.rs  template_graph_api_tests.rs
ubench/cold-start/: CMakeLists.txt  curl_cmd.sh  deployment.yaml  service.yaml
ubench/cold-start/src/: main.cpp  server.cpp
ubench/escrow-xput/: CMakeLists.txt  README.md  run_clang_format.sh
ubench/escrow-xput/include/: logger.h  utils.h
ubench/escrow-xput/src/: main.cpp
verify/host/: Cargo.toml
verify/host/src/: main.rs
verify/methods/guest/: Cargo.toml
verify/methods/guest/src/: main.rs
workflows/: CMakeLists.txt  build.py  env.sh  k8s_common.yaml  refactor.sh  test.cpp
workflows/finra/: CMakeLists.txt  README.md  accless.yaml  fetch_data.py
workflows/finra/audit/: function.cpp
workflows/finra/driver/: function.cpp
workflows/finra/fetch-private/: function.cpp
workflows/finra/fetch-public/: function.cpp
workflows/finra/knative/: Cargo.toml  README.md  curl_cmd.sh  workflow.yaml
workflows/finra/knative/src/: main.rs
workflows/finra/merge/: function.cpp
workflows/finra/util/: trade.cpp  trade.h
workflows/libs/s3/: CMakeLists.txt  S3Wrapper.cpp  S3Wrapper.hpp
workflows/libs/tless/: CMakeLists.txt  dag.h  tless.cpp  tless.h  utils.cpp  utils.h
workflows/ml-inference/: CMakeLists.txt  README.md  accless.yaml
workflows/ml-inference/driver/: function.cpp
workflows/ml-inference/knative/: Cargo.toml  curl_cmd.sh  workflow.yaml
workflows/ml-inference/knative/src/: main.rs
workflows/ml-inference/load/: function.cpp
workflows/ml-inference/partition/: function.cpp
workflows/ml-inference/predict/: function.cpp
workflows/ml-training/: CMakeLists.txt  README.md  tless.yaml
workflows/ml-training/driver/: function.cpp
workflows/ml-training/knative/: Cargo.toml  curl_cmd.sh  workflow.yaml
workflows/ml-training/knative/src/: main.rs
workflows/ml-training/partition/: function.cpp
workflows/ml-training/pca/: function.cpp
workflows/ml-training/rf/: function.cpp
workflows/ml-training/validation/: function.cpp
workflows/word-count/: CMakeLists.txt  README.md  accless.yaml
workflows/word-count/driver/: function.cpp
workflows/word-count/knative/: Cargo.toml  curl_cmd.sh  workflow.yaml
workflows/word-count/knative/src/: main.rs
workflows/word-count/mapper/: function.cpp
workflows/word-count/reducer/: function.cpp
workflows/word-count/splitter/: function.cpp
(+335 files in other folders)
