[workspace]
resolver = "2"
members = [
    "attestation-service",
    "invrs",
]

[workspace.package]
version = "0.7.0"
license-file = "LICENSE"
authors = ["Large-Scale Data & Systems Group - Imperial College London"]
edition = "2024"
homepage = "https://github.com/faasm/tless"

[workspace.dependencies]
aes-gcm = "0.10.3"
aes-gcm-siv = { version = "0.11.1"}
anyhow = "^1.0.0"
axum = "0.7"
base64 = "^0.22"
bytes = "1.4"
chrono = "^0.4.38"
clap = { version = "4.0" }
csv = "^1.1"
env_logger = "0.11.8"
futures = "^0.3"
futures-util = "0.3"
hex = "0.4.3"
hyper = { version = "1.6.0" }
hyper-util = { version = "0.1" }
indicatif = "^0.17"
jsonwebtoken = { version = "9" }
log = "^0.4"
minio = { git = "https://github.com/minio/minio-rs.git", rev = "b254b2f7aeaf18a1588a8800ff9b877b7885236e" }
p256 = "0.13.2"
plotters = "^0.3.7"
rabe = { git = "https://github.com/faasm/rabe.git", rev = "0dc7696a95eef44dd051e1d9c2e5c2c8c35211bf" }
rand = "0.9.2"
ring = "0.17.14"
rustls = "0.23"
rustls-pemfile = "1"
reqwest = "0.12.15"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "0.9"
shellexpand = "^3.1"
sha2 = "0.10"
shell-words = "^1.1.0"
snpguest = { git = "https://github.com/faasm/snpguest.git" }
subtle = "2.6.1"
tokio = { version = "1" }
tokio-rustls = "0.26.2"
ureq = { version = "2" }
walkdir = "2"
