[workspace]
resolver = "2"
members = [
    "accli",
    "attestation-service",
    "accless/libs/abe4",
    "accless/libs/jwt",
    "template-graph",
    "workflows/finra/knative",
    "workflows/word-count/knative",
    "workflows/ml-inference/knative",
    "workflows/ml-training/knative",
]

[workspace.package]
version = "0.9.1"
license-file = "LICENSE"
authors = ["Large-Scale Data & Systems Group - Imperial College London"]
edition = "2024"
homepage = "https://github.com/faasm/tless"

[workspace.dependencies]
abe4 = { path = "./accless/libs/abe4" }
accli = { path = "./accli" }
aes-gcm = "0.10.3"
aes-gcm-siv = { version = "0.11.1"}
anyhow = "^1.0.0"
ark-bls12-377 = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-mnt4-298 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-serialize =  "0.4.2"
ark-std = "0.4.0"
axum = "0.7"
az-snp-vtpm = "0.7.4"
base64 = "^0.22"
bytes = "1.4"
blake3 = "1.5.1"
chrono = "^0.4.38"
clap = { version = "4.0" }
cloudevents-sdk = { git = "https://github.com/cloudevents/sdk-rust.git", rev = "fa0aadb31de82956d44fba4b50c6a002d5bd0b7b" }
csv = "^1.1"
dcap-qvl = "0.3.4"
env_logger = "0.11.8"
futures = "^0.3"
futures-util = "0.3"
hex = "0.4.3"
hyper = { version = "1.6.0" }
hyper-util = { version = "0.1" }
indicatif = "^0.17"
jsonwebtoken = { version = "9" }
log = "^0.4"
minio = { git = "https://github.com/minio/minio-rs.git", rev = "b254b2f7aeaf18a1588a8800ff9b877b7885236e" }
nix = "0.28"
once_cell = "^1.19.0"
openssl = "0.10.75"
p256 = "0.13.2"
plotters = "^0.3.7"
rand = "0.8.5"
regex = "1"
reqwest = "0.12.24"
ring = "0.17.14"
rsa = { version = "0.9.9" }
rustls = "0.23"
rustls-pemfile = "1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_with = "3.8.1"
serde_yaml = "0.9"
sev = "7.1.0"
shellexpand = "^3.1"
sha2 = "0.10"
shell-words = "^1.1.0"
snpguest = { git = "https://github.com/faasm/snpguest.git" }
subtle = "2.6.1"
tempfile = "3.23.0"
tokio = { version = "1" }
tokio-rustls = "0.26.2"
uuid = { version = "^1.3" }
walkdir = "2"
warp = "^0.3"
x509-parser = { version = "0.16.0" }
