[package]
name = "attestation-service"
version.workspace = true
license-file.workspace = true
edition.workspace = true
authors.workspace = true
description = "Reference attribute providing service implementation"
homepage.workspace = true

[dependencies]
aes-gcm.workspace = true
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
hyper = { workspace = true, features = ["http1", "server"] }
hyper-util = { workspace = true, features = ["tokio", "server", "http1", "service"] }
jsonwebtoken.workspace = true
p256.workspace = true
ring.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
snpguest.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-rustls.workspace = true
ureq = { workspace = true, features = ["json"] }
