[package]
name = "attestation-service"
version.workspace = true
license-file.workspace = true
edition.workspace = true
authors.workspace = true
description = "Reference attestation service implementation"
homepage.workspace = true

[features]
default = ["sgx", "snp"]
azure-cvm = []
sgx = []
snp = []

[[bin]]
name = "attestation-service"
path = "src/main.rs"

[lib]
name = "attestation_service"
path = "src/lib.rs"

[dependencies]
abe4.workspace = true
aes-gcm.workspace = true
anyhow.workspace = true
ark-serialize.workspace = true
axum.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["derive"] }
dcap-qvl.workspace = true
env_logger.workspace = true
hex.workspace = true
hyper = { workspace = true, features = ["http1", "server"] }
hyper-util = { workspace = true, features = ["tokio", "server", "http1", "service"] }
jsonwebtoken.workspace = true
log.workspace = true
p256.workspace = true
rand.workspace = true
reqwest.workspace = true
ring.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sev = { workspace = true, features = ["openssl", "snp"] }
snpguest.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-rustls.workspace = true

[dev-dependencies]
accli.workspace = true
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
serial_test = "2.0.0"
tempfile.workspace = true

[build-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
