[package]
name = "template-graph"
version.workspace = true
license-file.workspace = true
edition.workspace = true
authors.workspace = true
description = "A library to parse and work with Accless workflow template graphs"
homepage.workspace = true

[lib]
name = "template_graph"
path = "src/lib.rs"
# doctests trigger weird bug
doctest = false

[dependencies]
abe4.workspace = true
anyhow = { workspace = true }
blake3 = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }

[dev-dependencies]
ark-serialize = { workspace = true }
ark-std = { workspace = true }
base64 = { workspace = true }
